Fix alignement  in meter sections

--- a/front/sass/_languages.scss
+++ b/front/sass/_languages.scss
@@ -28,8 +28,11 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
+    @media screen {
+      margin-bottom: 0.5rem;
+    }
 
     &:hover {
       & > h5 {
